syntax = "proto3";

package node.http.v1;

import "capabilities/v2/protoc/pkg/pb/cre_metadata.proto";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/capabilities/stubs/node/http";

enum HttpMethod {
  GET = 0;
  POST = 1;
  PUT = 2;
  DELETE = 3;
}

message HttpFetchRequest {
  string url = 1;
  HttpMethod method = 2;
  bytes body = 3;
  // TODO: add more fields if needed
}

// Message representing an HTTP fetch response
message HttpFetchResponse {
  bytes body = 1;
  map<string, string> headers = 2;
  // TODO: add more fields if needed
}

service Client {
  option (cre.metadata.capability) = {
    mode: Node
    capability_id: "http@1.0.0"
  };
  rpc Fetch(HttpFetchRequest) returns (HttpFetchResponse);
}